--- a/GoogleService-Info.plist
+++ b/GoogleService-Info.plist
@@ -7,21 +7,21 @@
 	<key>AD_UNIT_ID_FOR_INTERSTITIAL_TEST</key>
 	<string>ca-app-pub-3940256099942544/4411468910</string>
 	<key>CLIENT_ID</key>
-	<string>770562749688-qs1r7k33h9uqg5q64ob6muovsqj6hlre.apps.googleusercontent.com</string>
+	<string>200051588721-rkp5mj5vibgfasehrtq1eth1o9q6599s.apps.googleusercontent.com</string>
 	<key>REVERSED_CLIENT_ID</key>
-	<string>com.googleusercontent.apps.770562749688-qs1r7k33h9uqg5q64ob6muovsqj6hlre</string>
+	<string>com.googleusercontent.apps.200051588721-rkp5mj5vibgfasehrtq1eth1o9q6599s</string>
 	<key>API_KEY</key>
-	<string>AIzaSyAV5zITUjQU3e-Q7GFsetvXnRsdFqvBZYI</string>
+	<string>AIzaSyAF8RXZzRdvyiCrsDv3SQyWH_tj3jg-8_k</string>
 	<key>GCM_SENDER_ID</key>
-	<string>770562749688</string>
+	<string>200051588721</string>
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>com.bltechapps.budget3</string>
+	<string>com.bltechapps.expensemanager</string>
 	<key>PROJECT_ID</key>
-	<string>mybudget-89519</string>
+	<string>expense-manager-1a4e6</string>
 	<key>STORAGE_BUCKET</key>
-	<string>mybudget-89519.appspot.com</string>
+	<string>expense-manager-1a4e6.appspot.com</string>
 	<key>IS_ADS_ENABLED</key>
 	<true/>
 	<key>IS_ANALYTICS_ENABLED</key>
@@ -33,8 +33,8 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true/>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:770562749688:ios:d9cc3fa52276b60d</string>
+	<string>1:200051588721:ios:cd551e5c61eba241</string>
 	<key>DATABASE_URL</key>
-	<string>https://mybudget-89519.firebaseio.com</string>
+	<string>https://expense-manager-1a4e6.firebaseio.com</string>
 </dict>
 </plist>
